frontend/test/should_fail/keepOneForEach_unknown_accumulation_method.grg
test t
{
---
	def var i:int;
	def var j:int;
} \ keepOneForEach<i>Accumulate<j>By<blub>
